# irf-python-package-tutorial

./: .gitignore  pyproject.toml
src/tutorialpackage.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tutorialpackage/examplemodules/: __init__.py  io.py  list.py  plot.py  string.py
src/tutorialpackage/listmodule/: __init__.py
src/tutorialpackage/stringmodule/: __init__.py  stringutils.py
